--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ CodingFactory23.iml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/modules.xml
+*.iml
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -17,6 +18,7 @@ CodingFactory23.iml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/discord.xml
 
 # AWS User-specific
 .idea/**/aws.xml
